feat: finishing .net side of applications

--- a/NETZSCHExchange1/Form1.resx
+++ b/NETZSCHExchange1/Form1.resx
@@ -117,4 +117,201 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAAAAAAAEAIAC9LAAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAAAFv
+        ck5UAc+id5oAACx3SURBVHja7Z0HeFRV2sevq1KSTKakgWJZcdd1Vx93bfuJroogq3RxV9dCSKbdKZk+
+        KYglnRIghFASIICiu6L7WddddVdUQBRxBQsggr3R+ySk3u+cW2buTCaTCYSPmcn/9zzvM8O03Hu553dP
+        ee85DAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABIPE5w
+        HNNEolkM6d+Roq8hPzaNJI53Ez4xTvV9KQA4LRwlJxdH4plP/8tUv/8Ws2jrB8zirf9lFpJ/L/xEiAU0
+        Pv6Qf7502xYSHwuP2zczS/igr38ohvScvE4+s4T/fKTYHHXQv7WUD/I3tn/ALP/0feZZsp2tZPu/aWk6
+        bcfoSGsrf4xe2bqZqfvwHWbOJxuZeeQY1Wz7gMQmPmpDosYf0mfeD4lNIdH59fnbNzGLd5C/uePDCLG5
+        07/rd2xhGrZv4f8vnvh4E/Py1o/47T/EteOEB8EcFwWwae+Pirf2fHfp+iP7h649vG/oW4f2DX3z0L5L
+        +ThInh/cT/89dI34nD6uObT3kjWH9vDx5sE95DUpdpPYK49Lu449UcUbYvD/PrR76JuHd/983cHdF207
+        dkhJtv8sug8HT9OV8lhrG3+MPt23W/Hewd0Xv3lk38/XHNl/8Rvk8Y0jey+hseZwcEivd449Ugyl8Z/D
+        neJSefybj93y+AWN1w8JQd4Xnouv/5v/3t5L3j607+K3Du65+J39P128Zf+eFLr9R7kOnPAgmP3iSfHI
+        i3+77fbq4jdvrS5Z+4c5JW/fNLt0/Y1VJe8IQZ+XrSOPfAwjz2+oKl17w+xiEo+ReGTtsNmPrLtRjGGz
+        H11P3iNR8g6NYbNLNtxIo6r0XfI7YpSSf9PXi0k81lW8K0Txu+Q33rthTvF7w8jr9PeHzZ62ZtiMolfv
+        qamctmnfnqz//XQz8/VpEsCBdl4AZ5U+++SYO6see/n6ucWvXV9d+tr/zCv9zw01xW+SWHPDPD7e5KOm
+        +C0xyPOSN8XPyIO+97YYa0msE2M9iXfId2hsuGF+ybvD5peSKHlPjI1ivB+IUjGEf99QQz4/r3TtH+aW
+        /Oem2Y/9e0TltFfNi6pHku3/2Y/tLTjhQTA/dLTxj7kraydc5NUdHezWcZkuHZfu1HNpDnkYZGHkNORR
+        49SR0JLI4dKCIpe8rw+KwO8Y+Ui3G0jouXQH+VsOLXktN+j7aeT14ND7/x79bLpzSkea88GOKwrYHyr/
+        9cIoJoXhmwKno39Cqlnoa6uMQx1an9Kt70h1GzpUHhJeHQltaHCB0IV+hr4mRujz0Mjt4fvk0UOOE4lM
+        l74jw6XnzmcfODb60cIcIoBzvhf/rwHw86N4cj/QMH9slj37SCYpZOluUkg9bCDcLJfuMpOwimERg+U/
+        m+42dA6XSfwOCbeZ/w0h6HML/3oG+UyGW/iNNPKdNI8s3KbOwW+LkZzc9G/Qkz2XU1vvPzG+prLiEMep
+        3vjxW+aH0yCA/eJvGutq9D93GHzJZBtSyHYrPUYS+gihI2Hw/ztVDOHfhk7vd/f9aN5PJdukItuncRk5
+        NTmmWabJvtEl0wxEAP2+R2ci6EoA9y2rHZtpzT6cYSdXWKeBU5PCrXILQZ9rnCYSFiFIwVXzQd8TTrRA
+        GMXXzSQs4qPZ/1tKUpBpCJ8Rvk9PWCUfBvGRftbEqVxi8N9hhd+moiBXNo1bzynIVU9JroJXPerc+OTm
+        Tb/R2KfwtYCDTc29eoz2iMdIVzdfd4GTPT6QbHcK2S4leVS6DPx2p8qC/lvloqHnH+ln6OsKMfjPuKTP
+        CM/p6ykeIQLv60/ifZa8T46fiz4auQzzFN8dZY+yRAD9v4YAQKcmAD0pzmKYvyxbMCbDOuVwuk3HV9ml
+        k5YPWkiJAFROM6ekQf4tf184+Yz8yZdCCmsKucqnkKu8wkXDTMIkfIZEMrlKpZBQuKWgV1Oj7Ptsp+8L
+        v2nsVHjo1VSdr+cuyjfudTz9OD3Jz/246TjzRVvvtnV/EgtO7pIF+sEu0/EBZJtSyXHQOMmVlsrSKW6P
+        uH30udoZHCpX51CH+W6q++TeV8oEoJAEQGtM1lzf7RXFZiqAnRAACCuAs6kAasekEwGk5Wk5NWmTS1cU
+        Bb3i0GolvYqLQa/SfMEX30/x0oLNkjCRMIthFcPMv86fnKSNmpyvJZHLpdAgV/AUrz5Q+PmgBd4a8n0S
+        XqOwLTIJ0JNeQ14b5NJxN5YUvfiPr3alXTevnNlz3HdaaklTli7QD3KbfAOInKgA+P6MXhaA0hV4rafv
+        02OcLB5HWmNSkEcNEcCIihITFcDnEAAIe3KrGObepZIAcoMEIEiAXvGFwp9KQxSA9H6yXwCsTADyIK+T
+        gp4sCiCJFP5kKehr9D3yN+QCSfKauYFe+mgiwfpPbIVYxVXyzQGWS/fQ/gk9N8Rl2DntXy9NpL3dtKq7
+        txeHvKQaQPbSWn2mx+TrLwnAGUkAbFB0FoD8PTa4+eA8ufclAUjHKpkcNzURwPDyYiPtA4AAQPgawJVD
+        qABGBwlAKvz0yuulBc7iD1q1TCWvp9DIF4MUVCEsfCg8YpDXaEifS84nJymptqfk60jQdryB/y3+N0nB
+        TyVX/VTxu8JvSb8r/D3hs6RGQkJDmgbpYuegyq5tHT67Yj450ZOe3/09c+Q0CqAfbZ4QAaiJAORVcL5G
+        JPZj0ELp78Nwsf5akxBiP4eLFd9jhaaQ9H2+idWz91PF9wMiZnlxqmxa3/CKYgMEAMLyHT0pRl7D/KVh
+        weiMPNoHQIfwtLKOLeGKmypd/fkagEmsrhv9tYAUj9T2F8MjPYpXI9mVSfieENLvK/lONXPQ31GI3w98
+        T9omofNLJXY60hGHDJuR+9U0z9qlW7dcdX11hb/j7nQI4FwqJ1EAKlknYKADzsTXltROCx9C04kNCZOs
+        WWUKHGd38G/05P0UsRbFHzNyXJLIo9qu891WUcILYBcEAMIL4FpBALaAAORVVb6KGVI4UzyhEggRgFuS
+        RTgBBFfnU2VXw1DhhBeALtCO5kcFzFyGw8INcpmP3t2wkFZ3f/YJ2a8fe6kWsFvqA1gSLACVyxhU9Q8I
+        wCw0mZxWPpRdCiAQ4Qt4z97n/y8kabqoAEgtyUYEUCkI4AsIAIRtAlx1ARXAmIgCCDoB5YXdFFRIpc8o
+        ZJ9X8FemYAGEFvzwf0dqyxojCoAfJnSRponD0H5VWeGLL+7+9hdzP9zArOYO9coxkmoTOUQAWbQJQASQ
+        7BJGQ7oSQKpMAKn8Z2VVdr9QrWKYO+13z963iK8bA9J0CcdcY9f7awAQAAjfCZh5tiiAHCIALRGATjbM
+        x4YNhbtzFV8qAEqxXSqc8ELbVy4ARVgByIcWjX6JSDUMBT+8FdwEUIsCUPKdhya+DX7hNMs+x79W087A
+        s74k+9YbTQHpN3Lra/lRANoHkCR2hsoF4O+gpFdkvoBa+KDHSiEOz0kRWqMKX8B79r7QN2ASjptfADrf
+        8IrH0AQAkQTQj7lv2cIxmXm5h9PzDOSkMYqFTyywQYkrUmFlw1bvOxVsZ/Dn5IkqoVd+RUgTQRrTlqQi
+        fDZkKI0WQvoZIoBUr4EmBrXcsqB0wWauJf2pb3cwm3rhpN/vTwSq1Z/vMvsGkqtuchgBBHXyidV8vkB2
+        6i8xdqoJpYZ0EnaWbrTvi8fSyXYSAPIAQHgBZAxg7l+2aEyWVUsEQNqNdlrwTP6CTa+sQnabXlYIoxMA
+        HaaihaE7AShCfqtLoYQRgFocElST7VR7c7lfPGL9ZO7Gt6+m+0fTXw+f4ol/QLoXYHGtfojT7EtydhZA
+        uGG+4H0zhESoAAw9jFABBL+uCKoBFEMAIEIfgIIhAlg4Jisv9witAajtxqDqvbz3XTrZYk8AJOiNMF4d
+        Nzhfd2jyU0seoskvbzcdYb5tbz8DAgiEPKciNHpe8KMTg0LeByB2AkIAILwAziECaFgwNjMv5whNBVY7
+        DEFNAGn8WRCAUcxICwggpZvOvdDPhb6v7EUBqD06TuPRctfNmPbKXz/flsm4tcyhUzzxQ5oAjUkhTQBa
+        O+oq8095SgLQi3EqAjBQARghANC1AM5lmPuEUYAjwiiALmh8O/QEFlJy2V4PuQAUnYa9gkPtNMkSYWSp
+        srS54tJxQ1zs51Nf+Pt4OiT4ZUc7aQqcfC1gn1hwtEQA57lMjQNcligEIOvbCFNTUpyG4xfoIDTxiUo0
+        o1JjY4kAyiAA0K0AxkoCSLNrO6W3dr5y9f6JqwhTk+haAGZZIQu5CjpJU4Cd0jqqsnjRQY5TrNr6MbPn
+        FHIC/AKor6U3AzX2DzMK0FUfgFxuKRH2DwIAZ04A/YgAli88owJQugLDh91+Vkq28YvD0Om31FYt9wuX
+        afPcDW/e1O+BCULC0ykKILe+1jDI3ZUA2LBxWgt6JJk6TQEBVJRDACAaAdA+AG2gCRByy68i6J529rRI
+        INpCo5Rlxyk8xjDvG7gsh9Y3fuFMJ71NeMuJIyc9GiAXwGC/AEzicF/4YbnYEYCJCgCdgCCCAH5GOwEX
+        jc3M0x4R8gDkVXJDSB6AIWgYUPrcmTrR5fII1Fb0/HarXLntNxS7X/7Hjk9+OXfNP5lrP11/UsdImhLM
+        UFdruMBpbkzmRwFYmRzDJOZ0lcBzBgQwvBwCAJEEQHhg2eKxWVZJAPJEIKHTL5IAUmJAAPKxcIVbuMVY
+        4cnlLrRlH7CurJtEMwP38jPj9rwQSKMIxsW1hgsdnQXA739sC0APAYBoBHDUnwcg9Vp7hTa/0h0/AqD3
+        CtDJR+i8AxkebevtVcXLNh87nPnU1i1MxUkUgu5qALEugFvLyyAA0I0AGhaNy8zLPSrkAeg7CyDGmwDC
+        NkiTZtCrv44bUKDllEV67tfT7NtmvfbKME7MCuxpXoA/D6C+1kDzAPhUYHf8NAGIAHS0HwQCAJ2QZoq9
+        f8WicRm2nKO0E1Dt0AVm+hEFoHKFTm11Zju5IocwaQidfCS10MANyTcey66fTy7+3ICNhw8w60/4TkoA
+        +voFhkAeQHAnYKz0/ocRwPFbyyAAEJUAphylw4B0RqD4FgArzDTsJQWTSCDDreWufcz9n79u/+giuq/f
+        tbf1qC/AXwNYskA2ChB5GBACABDAmRSAS5hanM7dry7QcxdOM/9oe+kpOh5+9gfNx/mlvno6DKhdEn0e
+        QCwJ4JayUggA9KUmgFQLEASQSgSgKdJ33Dyv+MktrU0Z5Zve6tE6gntDBMDPB+COnyYAEYAWAgARBfDA
+        8vrxmXm6LkcB4k4AYqIQFYDKq+cyPDruV485dsx8d80oZszvejRRiOxmoEAnoH8UwBjrnYAQAOheAA82
+        1I/PsiaSAMwBAXj0XJpbyw3y6k6Mq6uaSgrDwPW+w/7JPqMeBlxcaxjiNDcmBQ0DsrE+DAgBgO4FMHl5
+        3Xg+D8Cm528HTiQBKOniI/l0qvPsjitK3euf2PHpb52vPhd1P8CBkBpAkgsCAIlWA1ixeHxwHoAxvgXg
+        DjQBUokABhbSRUlyuHR3zlHtX5fRAtHv0xYfs6+j+0KxP3A7sOE8vglgkeUBxEEToBQCAN31AaxYND6R
+        OgGlKbv5OQPpHHwFeiKCXE7tndI+bPZDL76x7/sLare8w3C+7gvFviAB0DwAs18AQicgG9udgBAAiE4A
+        iTQMKJ80VFjGW+XO5TTeKdzQaeyuirX/GkHvD/g2ivsDgu4G5OcDMHNJ/qnRIAAAAcS0AKTQuOl0YTlc
+        pjen8a6VNTV7OS551d6vuu0LkIYBc4RpwSEAkIgCWJxgTYCu5gzUcqmeKdwvSp0blm/fcgUt/N+3tzGN
+        EQrHXtm6AINDBIAmAEiMTsAEywMIKwAxVF4TN6jAetC8+kkvKRjnfHSiiWEiFA7ZrMDi3YCW+MoDgABA
+        98OAgTyAcPMBxLsANLL1A5QeC6kJmLgbKh59ZsPhQ4O9r/0j4h2C0nuGReHmA4iDYUAIAHQvgEAegCZo
+        WnBhRiD5rcBKd3wLgC4/TlcvvmSq46tpr788Tj7UFw55IlDn+QAgAJAITQBZHoDGoefXmZNPsqEMmSMw
+        3gWQlE9rAWzzqOrKshMcl/r2vp/8bf1QOqcCx1cewM2lpbkQAIhiFEDoBJQmBVWFTgp6mtcFOG3zBbql
+        9QPEKbNpJ16+hU92unKqc8uSd9dfr1+5hB8NONDa3uUwYLzmAdxcWgIBgOiHAc/UugD/XynCCrqEtpdc
+        xfPNXLo19/gDdTVWOlnIR03Hwg4J+vMA6uIzDwACABBAyLLaClI4+hfSqcT0HTeUP/T6S7s++3n+K//L
+        cO1cl8OAOf51AcIJILifBAIAcSaAxZ2aAP/f6wKc/jkDhSYAXbY71ctyAwqN3ECvlruogP2m5JXnx9Fl
+        xOgdgqEdgnvlNYAu8wCC1wOMJQH8oaQkhw53QgCg605AWR4AHQaMt3UBop01WNh2Paei+5Wv5xREABme
+        3JZxi2YtJ8ciZcXX2zs1AyLnAYiTgvrFGCxIpQsCAHExDBg5DyA+1gWIUgBuHad26/l5AlQeUuNx5XK/
+        eti2efY7a26U7g+QryIUOQ9AnBbcHVjtV2gmCWKUljw7swIohgBAdwKIPB9AfKwLEL0ANEQAQmj5OM9r
+        aMx5qqGS3ia85sA+5pissETOAwgvAGkVYGVMNAEgANBdE6Cb+QASqgngpvcE6MQgEiD7mFHActdXPvyP
+        V7796pI/r1oWlBkYdkow+boA/NqE0vCoNFwaEKPizAtgCgQAohgFCHMzEL2XPk4nBe06LyDk/gCyj2kF
+        Ju6SIttuz/PP3EOPxwlyXKQpwzrnAYSuCyBPkIrFTkAIAPRgGDDodmCxHyCRBCCtGxB0q7CX5TLdxtZR
+        VWULPmtry3zhy13MByECCOQBdJ4WXC6AWBsGvKkYAgBRDQP2HQEoPSZ/qEiovWZ+ZOBXU+1fz1q35rZz
+        su/iq/7NJDrnAUAAIEGQ1gZ8cOXiCX2lCRBOABpSWJT5LKdxaJsmLa2ZRgqM4p1jh5ivZQII5AEEBBAP
+        TQAIAHQrgMkr6idk5tHVgfWJMS14DwSgFAWgymf5EYLflRW+89zObZfdsbyGaaX3B3TKA6CjAIIAQjv/
+        YjEPAAIA3QogmwggoaYF76EA1LQG4GVJU8DAXVRo2u36+yp6C+0529pausgDCAhAPvwXeBR6/5WoAYD4
+        EEDdhKwIy4MnugBUtA+ACIAuJpru0XbcXlPx9+0cpyr5eCNzRDxGxkXz9RcRAaQ4uheAfBgQAgCx3wRY
+        uZg0AeR9AMY+JQChL4AVUoTdudyFheaP56xdM5xmBkp5AOxCIgB7eAH4b5UOSQTCMCCIDwE8XjchkWYF
+        7nmYRREIox7pDn1jdv1Cmhk44MODB2UCMPECSHEGC0B+rCAAAAHEcSi8JtIMMHPXTSt47Z9ff3VZ7oql
+        /ibAxU5Lo8KZx6W44koASAUG3QpgIgQg3dtAawJm7mJv3l7L6lUPSHcHsnUL9Be7rI0KFxGA2wIBgPjn
+        +yABJM66AD0Po/85LThJtFPQYWy9qfyR2u3trZnMby5mDEQAF7osvmT+XgBL0DBgbAsAtwODbgQwZeWS
+        iX0pD6BTp6ArMGNQitvMDSQCSHUYuMsdlu0zX/7HTcxAhtEvXag7z232CfcCxFMTAAIA3Qgghwigy2nB
+        +1ITgE4XRmf8oXkBZP8GG3OPT6wot5EC1D9n6UJtlpP19SOFKymOBHBzCT8lGAQAIgmgfmKWbFrweF8X
+        4FTnDKSFh4bapm+/Zqr3lX/u3HnhA3W1uVQAA5xmvgmgiBcBYE5A0K0AHq+/KysvMCdgvK8LcPJzBtIr
+        v9AMoP0AKeS1wXbjV7bVT47TPbnCONhj9SmcVn4UQCGbMBUCAAkgAGEUQOPQJtS6ACdVgNxiHwhd+MOm
+        a7l6+iPLdM+vdg7Kt/tULrPYZyAdG32MCwALg4AeCCChpwXv0XCgKAByLDLd7Ib7nnmy5rxCZ6OKFC65
+        AFLdgVGTWBQAlgYD3QogFwKIuLJQhst08H/mVH4xqMDWqnYYIQCQYAJ4YklQH0CirQtwqgLQOFhusNvc
+        oSEFn94tKfSRSMdHH9sCKIMAQBfQTECa6ZbzxNJJUh5A4q4LcApTiDmNnNpuEKb5drNBk4CEqyFBACDO
+        BLBsUkZe13kAibEuwCnUAogAVP6qf9wJQAcBgMgCWLV0Uoat6/kAEmNdgFNdcjx4ivF4EcCtZWUQAIgs
+        gNxVSyZl2rqeD6CvNwEUnab4iiyAFAgAxEsnIBWAbtXSu6VRgOBZgY197m7Ak80Z4JcDi5VtCgjAd2t5
+        mR4CAFEIIKfPTAve2wI401f8KATQDwIAJ1EDgADiUkoyAQwvL4cAQLQ1gL6xLsBpu50YAgDxKADtEw13
+        S3kAdLirr80HkOA1AAMEAKITgI0KwAABJJIAKiAA0J0AVi27O1PMA1D1gXUBIAAAAgI4i/YBSHkAKmfi
+        rwvQlwRwW0W5EQIA3Qog7CgABAABgL4igBwIAAIAqAFAAIklgAoIAHQngGXh8wAggLgXwIhKCAB0K4CG
+        u/lpwZEHkIg1ABYCAJEF8AQRQJ72aJqYB9Bn1wVIxBoABACiawLkEgEIeQB9dl2AxGwCUAH0hwBAFKMA
+        Qh9AYK28vrEuAAQA+rIAgu4GxLoAEADokwLIwbTgEADo6zWAeBCANAFHrE3EAQGAOK8BxMe6APyU5V4T
+        py7Mi6mpuCAAEJ8CeCKQBxAP6wLQAq+ZZm+5cXntdlWBab+0DUp0TEIA4CQFEEfrAtBVe9Mfsh//y0ur
+        y4YU2V5PdRpR8CEAcPICEPIA4mVdgBS3icsqtB03PP+M+ba5lYUau+FQX5miHAIAp7UPIB7WBVC6TNz5
+        Hqtv8vIl2sKXn7tmiMf6Md2OJC8kAAGAHgtAG0frAtB2fprdxF3otjTev3i+9rP2trQbq8oWKL2mlnO9
+        Rm4AOgUhABAdP/jnBFwyKV6mBad/N8NGBOCyND1QP99A92Piopq7Mpzs4XO9eq6f19DnawEQAEh4AVzg
+        tpy4f+l8I3P1L5nFG9/77eUFrvVJTn3HAFJrQQ0AAgA9EsDSSfGyLgDfBHCYuCEe84n7ls5j6X6QfRg4
+        akbZ1HSnoSnZBQFAAKBHAqDLg0vrAqjtsT0fABWAxsFyg/PZ5nsbqnkBMHffwRS98Oxtl3jztqrtbJ9b
+        vBQCAKckgCmSAGxEADG+LgAVgMrJcoPyTc33NNSY6H7M3/Qus721OfXmkkeWDHFa2jUuU59bvhwCACc1
+        CkCZQpoAGbau8wBiSwAmTuk0c4MKzM1/FgXwXUcHFdnZ7hUrs3/ptX+rcUMAEACIWgA5Tyy5S1oXIFwe
+        QEzNCMQLwEJqABYigFpeAN+2d/D78fTGTRdc6XW8rrHR5CU0ASAAEJUAcokA4mNWYHJld1mIAKzcYG8e
+        aQIs5AWwi+zH+z/upbWA/pOrqx89L894hG5fX703AFOCgZ7VAB6vjw8B0La9y8oHFcC9DYt4AXxB9uOE
+        uC/FLzx37YUudluqUz6zESYFhQBA/AvALQhAQeK8EAG0kZj1wTrmtf0/Zf1u5kPLkx3ZrUqaxuwxdQoI
+        AIBOAoiDdQFIDYAW/hSxBvDnZQv9AjhMYiPXSpsBP/vL8w1/zizUH0ilWYFeUuD7sACwLgDoXgArl9wl
+        zQcQi3kASmlYz2XmUtxWLplEZn5e88Sl83kBfC7uR8lP25hpb7/ELNv5weW/Lra/murRtQ8sJN/xWgKF
+        34uVgQAIFcDESPMBnGkBqMIIICPf2jyubl6QALaTGsD6I3toLeDcO+eV2bM8Bl+/fJZLkiYM8Qi1AawN
+        CECQAOonSvMBaGJwXQDhbxn5PoBIAqAcp88vGMjMfPWlWy71mj4e4NJySS6deEszFgcFoJMApjxeNzFT
+        Nieg0hVb6wIogwRgIQWaCMBjIQKo7iSA9g6Omb9pHfN9R6t6WPnU5Wq3riOFSEDp0osCgwAACBLAZCKA
+        DFscrAtAmwBOUgNw5HGZLnPz+IVz/Z2AEk3k+Y72Zj4z0Lhqif4ij/EHjVvHqUioyX6oeZFI+wYBgD7M
+        D2EEENPTgrssnIIU/mS7lct0mprHL5jTSQCUA+K/V235YMg105yvZzhyOLWHCMCjhwAACCOACfEmgAwi
+        gHFdCIDh3mI2+47SWsCAKXXzSs93aY+qvaQZ4NXzEuhLAhheUW6AAEAUAhD7AOwxvC4A3wTI45IcVABs
+        85j5s8x0+3eFnNzHyL+PiXc6znrtlWFDvcZtSncOp8wn++aFAAAIFsCK+gnSfACxuC6AP6ffRU5sUgsY
+        6LRwaUQAo6oreQGEO7kXkdeWbH6P2XBwb+ZNMx5aqnRmtyYX6DlFPhGAx5jQacIQAOiRALKJAPhEoBhd
+        FyDw9yQBmIkAjM0jZpeHrQFQjpLXdnH8bcIMu3r5+AsK2H3JhQYuqYBc+T19ZxQAAgBRCKBuQiyvCxBW
+        AI7IAqBM/WAtM3vdv5kXvvzsst+XF72s9BrakwqMEAAAQU2AlYsnZMbwugBhmwAyAXzRxcn9RXsz81Hj
+        MVoL6Hd3fbVzUIGlkRcWBABAQAAPEgFIowAxvS6ArBMw3cE2j6wSBPBlhJN7D30v909M8Rv/vOXSh9wf
+        p9qMCZ8MBAGAXhJAjE0LLhsGTLezzbeLAvgqwsm9j7xXvmE98xnHpd42c/qSLLupPagGAwEACCC+BRCp
+        BkA7Ab8ThgTP9jz99D2ZVv2XCtnU4Yk4axAEAKLi+yABxMG6AF00Ab6IcHLT0YCmDvL+iOuYFz/fMeiK
+        RwtepkObKWLnosbJJtxNQhAA6JkAltePz8zTHU3PM8TofADyTkArN8BpJdvDNt8mdgJ+3s3J/RN5f2cL
+        f39AP11DnSvDwx6gHZ10enG6xgCNRJIABAB6JIDJRABZ1tgVgHwYMIk0A/qTmoDSZWy+dY4ggB3dnNwt
+        bRzTTj8zVMWUv/rSVRcWmj9J9ej9+5FoE4hCAKCHAqgbLyUCxeLCIF0KYK4ggM+iOLm/Jp9Z/tlmZqPv
+        cMatNaX16W5dq4LUApI8Jn5/FWgCgL7bBFhMmgDyRCBjbArAJQigHy8AlgigghfA9ihObjpRyGdCZ+DP
+        dM+t/NNgj+5AMqkF9Ms3cQO9ibWACAQAeiSAB1YsGh/LnYABAZi5ZHce14+E0m1pvlkUwLYoT+66pr1M
+        2YbXmSe/2nr5VZUFr6W6dR0D8mltxySrARgTSgC4HRh0K4D7eQHE7jBgQAAWIgAbEYCNU3p6LoDP208w
+        7zUeprWAcybVzbENcRl9KU5S43HL5wk0QAAAAohlAQzw2Di1N6/5FvFuwE+59qj3mQ4LnvvgeGbRhrd+
+        /+v8vPdT88j+OiEA0OcFEA9NAFEA3mABfMK1Rr3PJzo6mGe/3klrASkjZpUuTHcaW1OC9gVNANDX+gCW
+        142L5TwAflpw0v4XBJDHC0BDBHCrvwbQFvU+H+ng+NRh2hnofGH1XYPd7K5Ul16c/BTrAoA+hD8VuKFu
+        XLzkAdApwakA0ogAhp9EE4DyE9fB/Kb8YeaZXTvSrnzY84LKnsupvIk5CgABgG4F8EDD4nGRJgSRrwmQ
+        6j7DAvBYAzWAuVIToGcCeId8fksznxl47uRli6wZ9px96gLx1maXKaEEgKXBQLcCuL9h0bhM2cIgtB0c
+        OiXYmVwXQOWSZvKl+QkWQQAea/MfqkpFAbT1aL8bxbUEmUuVzKy3/33lJUXm95Mc2Xz+Q6obAgB9TAD3
+        LV84zj8pqKOLSUHP4LoAoXkAAz2CAIbNeMxC7/b7iGvp8b7TOwSf+XoHvY9AOap2epnGrT9BOz0VHhYC
+        AH1IAOcSATQsGBvL04KHjgJQAajdlpbfVzxspQLY3N7U831vbmV287WATMbx3N9G/Tzf8qPCbUyIjED0
+        AYDoBdA/fgVwffk0KoCzPmxrPKn9X9t0hFmw/m3m1a++uPj6Rwr/Rva7XZFwAsAwIOhWAAvHdtsEOIPr
+        AnQpgIpTE8COtmbmy/Z2frKQexfNNw52mY6kuJAHAPqSAM5hmPuXLR4rrAtgiMl1AcLlAag8lpbrJAGc
+        RBNAYg8RwJWPFTH177/321/m29YprLnk70AAoK8IIH0gLwApD4AKIKbXBRDzAHpLALQP4V+7v+eXERs5
+        vWTOICfbrEQNAPQF+EzAW65l7l+6aGyk+QBial0AT+8KgN4bsFvIDDyr6NnVoy6ym7eqnSw/czDNDFRC
+        ACBRoUNhzMjrmfuWLRwTaT6AM98EkOUBuC1cfw+9Hdjccm35Q7wA/tveeErHoYUch1vmzGRe//ILzXXT
+        Cp5Ns+rb1Q4jP1WYJAPMBwASUwC3X8fc21A7Jm7mA3BZuf7uPPLc2HJNWZEggNZTE8ARchy+EDIDz8lr
+        WKY/n9Xu1lh0dOZhLi1kvsB4uF8AAgDRNwHG38Lcu4wKIE5uB3bmcf2JBBROQ8vVpYW8AD5o8Z3ysWgl
+        x+Kawnxmydp1l13hzFt3vs3AZcr2M56GByEAEL0AJtwaVwJIogJwEgE4DC2/kwTQfOoC8JFj8do3X9E0
+        4ZTbS6YVnW/KbtJ4WS7Jy4rHAQIAiSiAicMFAeTFSxPg9Ajgy30HmTZ6PO74A1Pw9BO3/Sbf8m1qvoE7
+        p5CNuzkD0QkIohfAPeOYe5csHC3lAcT07cDiugCCAIykCVDUawKg7GxrYRo2rmPWff/NhTdVTl2VnK9r
+        O7uQThpq5hRxdJOQwmnmh0s1NjMEALqGzwO4ZzzzFyKA+FkXQBBAqkwAm1p6RwDftLcyHzUf5ScLubeh
+        RpeZzx7qV2AkzQAT7gUAiSqAcUQAC0bHy7oA0spAqXYigLKiPCqAjS3He+2YHCTH5HyvkVm6+b3fXDbV
+        9kYKbQp5aXKUMQ4FwPpGVJazEADouglw7xjm3qW1o4PzAGJ5aTALl+TI45R2vgZgo1fr93pRALQf4D/7
+        d/OZgeNqZlQNLjKfSM1nz8g9ECctAJeQx6GxG3wjZ5SbyL70hwBA+BrA/WNoHsDoLHvu0Qy7ltM49fzJ
+        niK7/18VJhHoTC0OKqwQbONUdlPLNaVFdiqAd1uO9doxoTkB0pyBD7/2/KiLCk3bVP5kKGNMJgUpPFLq
+        Nsv3VfB9ALQGQAQwama5BQIAEQQwmghgPhFAjigAXbAA3LEogDxOTQRwdUmhk97J9w5pt/cmh8hxufvp
+        OubVPd+q/qeiaHWaR9eu9Oi5VCJHZazfLegKCCDNboQAQHcCuIMIoIYIYMrRDEcuEYCWFHo6FCgEfR5r
+        AlA6bZzGYWq5qqTATbP31p043KvH5XWujdnJdfCZgdbVy3PO9xp+UpJjkeykawgY+Cq2IoZFoHCS2oDX
+        xGU4SQ1gVpkZAgBdCyBnLHNPw7zRmY7so+mOHE7jyu0kAGUXAlCeanTX9neHfoeuCWghEiBNAKep5cqy
+        wnzawfVmLwugSZwz8IICI1O/af1ll0/NW6t2abmBfJCakSiAWFlQNPgY0W3Tc8n5Bi7dpfONqirlBfA5
+        ERoAQXxDBaAfy0xaWT1a45p8VOWawik9OaRNqQ0IQOwHkIdUOOXLa6ucPQmzEPSK7jbzbdjQSA39fT4E
+        AShceVyKm225YnpRET2532g+0uvHht4n8faeH5gOjkueVDOzID0vu7GfO5frT4+J00hqIcbA/rjOYJC/
+        r3Gy/k5apVvPJZH/vwFFRNzeXN/w2cV8J+B2CACEsoueFFNuZSasmjdGmT/5WIo3m0smkeTNIaEloedj
+        YL4uEPQ1/m5BIymEQijcgdmDpLv2ugyX2E4lQdfko8tzD/QaSRhkwZLXWVrI/VdZhYuG2AfgspJHQ+tV
+        FQW8AN7u5RoAZY9wcxCjzrmHefSl50YMdRm/S3KR40JqRPTqzwsgBm4XlkSs9E/fpuPOLcjhzpmWw6UU
+        ZjfePO9Rvg+gJ6sngT7Cl/SkGPs75v7Ha+4435uzO8M12ZfOR7Yv3ZnTmO7UNaY5DI1pTr08fOkOgy+D
+        RKbdcJxGlp09nmWTBf9aV2HkP5NJvpPuYI+nkSBXMHn4aJDXyd9hyd9gfVk2EwkzCQsJK3nN0jjIrjty
+        9cMOmgdw9gbfwdNyfL4lglz2wXukJvDTeTcUFyxOt+UcTbNrGzPzDI1ZVmPTYBvbNIgE2X95NEoxKLrw
+        nWqQ7SCPRhL0/0XnU7izfcmFkxsHF+Xun7iwgg6VJm1t8+GEByF9AK0nmEHW+5jprz1/8bh5pdpRVY/p
+        75hTYhhTXW4ZVzPDNr5mtmN8zRzHBBLkuX3cvNm2sdWzrGPmzDLdWTXDcMfMSu0fp1fkjKqsmHJ7RXn2
+        yIqy7JHlZZNHVpROHlFe+mBI8K/zUV5OHiuyR06vnDJiRmXObTMrc0fMmq4dOWu6bmTVdN3tVTP1o0j8
+        cdZM/Z0zZ+pHz5wlRpV+TNUcdvS8atuE2jnuyfXV19JEoI8aD5+W4/MjqQHsEScL0a6ov/y22aXGkXMq
+        HePnVHnunju36E/V1VPvrp5bOKl6boEUd1XPzb9r7pz8iXPneCfOne2ZMGe2W4gq1/jZVU4SjnFVs2jY
+        x86aaRsza0bemJkzrKNnTrfcOWO6+c4ZlaY7pleyd0yvMP6xkg/DqMpyw6iKcv3tYYK+/kf+sYx8plR/
+        +4xS4/DZJZbh80vtd1SXaB2PL/417cz8srUJJzwIEcD+A3w1l4550840ulKO+NifJsKQGBgSA8ToL/v8
+        ObI4uwch/965EaJfmKDbkCS+z0/ocbrIenmVdIzOEvd7oPi3k+kCo+JjuEgKiYERjqd0TOURbr+jPUbS
+        dvYTt5t56ujXOOFBMN8fP8Z81tHEfNXWxHzWdoKhPcWB4LqNnWLsOsnYKf7ODjE+k8Xnst/+Qhb0ta0k
+        PuloZ7a2NPGFc99pFAD97ZnccbI97cxHJD4msVPcll1nIHaGROj7n/PHh25nGzmm7cxPgryY4xgGBAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEoj/A853X8ow
+        RCxSAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
